<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <artifactId>VoidTotem-parent</artifactId>
        <groupId>de.rapha149.voidtotem</groupId>
        <version>1.8</version>
    </parent>

    <artifactId>VoidTotem</artifactId>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.13-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-api</artifactId>
            <version>4.9.3</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-serializer-legacy</artifactId>
            <version>4.9.3</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-minimessage</artifactId>
            <version>4.2.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>de.rapha149.voidtotem</groupId>
            <artifactId>VoidTotem-abstraction</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.voidtotem</groupId>
            <artifactId>VoidTotem-1_13_R1</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.voidtotem</groupId>
            <artifactId>VoidTotem-1_13_R2</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.voidtotem</groupId>
            <artifactId>VoidTotem-1_14_R1</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.voidtotem</groupId>
            <artifactId>VoidTotem-1_15_R1</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.voidtotem</groupId>
            <artifactId>VoidTotem-1_16_R1</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.voidtotem</groupId>
            <artifactId>VoidTotem-1_16_R2</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.voidtotem</groupId>
            <artifactId>VoidTotem-1_16_R3</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.voidtotem</groupId>
            <artifactId>VoidTotem-1_17_R1</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.voidtotem</groupId>
            <artifactId>VoidTotem-1_18_R1</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.voidtotem</groupId>
            <artifactId>VoidTotem-1_18_R2</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.voidtotem</groupId>
            <artifactId>VoidTotem-1_19_R1</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.voidtotem</groupId>
            <artifactId>VoidTotem-1_19_R2</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.voidtotem</groupId>
            <artifactId>VoidTotem-1_19_R3</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>
